@startuml
skinparam linetype ortho

class Tabuleiro {
    - Map<Posicao, Casa> casas
    - Map<Time, Integer> pecasPorTime
    - VitoriaDerrotaObserver vitoriaDerrotaObserver
    + Tabuleiro()
}

class Peca {
    - String nome
    - Time time
}

class Jogador {
    - String nome
}

class RegrasDoJogo {
    + validarMovimento()
}

Peca --> Tabuleiro : cria diretamente
Jogador --> Tabuleiro : cria diretamente
RegrasDoJogo --> Tabuleiro : cria diretamente
@enduml